vbnc/vbnc/vbnc/tests/Errors/30533.vb
Class T
    Const M_Date As Date = 3.0R
End Class